--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>My first ever website</h1>
-    <p>Feeling happy</p>
+    <p>Feeling hapgitpy</p>
     <p>I am a ghost</p>
+    <input type="text">
+    <br>
+    <button>Click me Baby!!!</button>
 </body>
 </html>
