--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>My first ever website</h1>
     <p>Feeling happy</p>
     <p>I am a ghost</p>
+    <button>New styled button</button>
 </body>
 </html>
